# MechEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CountCodeLine.sh  README.md  main.cpp
Config/: EngineConfig.ini  (+1 more)
Engine/3rd/: .gitignore  CMakeLists.txt  README.md  luisacompute.cmake  mcut.cmake  pytorch_build_command.txt
Engine/3rd/libigl/include/igl/: exact_geodesic.cpp  exact_geodesic.h
Engine/3rd/libpmp/src/pmp/: CMakeLists.txt
Examples/: CMakeLists.txt
Examples/Source/: TestRendering.h
Project/: CMakeLists.txt
Project/Source/: TestRendering.h
Source/Runtime/: CMakeLists.txt
Source/Runtime/Actors/: CameraActor.cpp  CameraActor.h  CurveActor.cpp  CurveActor.h  LightActor.h  ParametricMeshActor.h  PointLightActor.h
Source/Runtime/Animation/: FKController.cpp  FKController.h  FKSolver.h  IKController.h  IKJoint.h  JointComponent.h  Joints.h
Source/Runtime/Classes/Actors/: CameraActor.cpp  LightActor.h  ParametricMeshActor.h
Source/Runtime/Classes/Animation/: FKSolver.h  IKController.cpp  IKJoint.h
Source/Runtime/Classes/Components/: ActorComponent.cpp  ActorComponent.h  AreaLightComponent.cpp  BCParametricMeshComponent.cpp  BCParametricMeshComponent.h  CameraComponent.cpp  CameraComponent.h  ConstLightComponent.h  DirectionalLightComponent.h  LightComponent.cpp  LightComponent.h  LinesComponent.cpp  LinesComponent.h  ParametricSurfaceComponent.h  PointLightComponent.cpp  SCAFParametricMeshComponent.cpp  SCAFParametricMeshComponent.h  SCParametricMeshComponent.cpp  SceneComponent.cpp  SceneComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h  TransformComponent.cpp  TransformComponent.h
Source/Runtime/Classes/Curve/: Curve.cpp  Curve.h
Source/Runtime/Classes/Game/: Actor.h  StaticMeshActor.cpp  World.cpp  World.h
Source/Runtime/Classes/Materials/: Material.cpp  Material.h
Source/Runtime/Classes/Mechanisms/: ClosedChainIKSolver.h  SpatialJoints.cpp  SpatialJoints.h  SphericalLinkage.cpp  SphericalLinkage.h
Source/Runtime/Classes/Surface/: OrientedSurfaceComponent.cpp  OrientedSurfaceComponent.h
Source/Runtime/Components/: ActorComponent.h  AreaLightComponent.cpp  AreaLightComponent.h  BCParametricMeshComponent.cpp  BCParametricMeshComponent.h  CameraComponent.cpp  CameraComponent.h  ConstPointLightComponent.h  CurveComponent.cpp  CurveComponent.h  LightComponent.cpp  LightComponent.h  LinesComponent.cpp  LinesComponent.h  ParametricAlgorithmComponent.h  ParametricMeshComponent.h  ParametricSurfaceComponent.cpp  ParametricSurfaceComponent.h  PointLightComponent.cpp  PointLightComponent.h  RenderingComponent.h  SCAFParametricMeshComponent.cpp  SCAFParametricMeshComponent.h  SCParametricMeshComponent.cpp  SCParametricMeshComponent.h  StaticCurveComponent.cpp  StaticCurveComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h  TransformComponent.cpp  TransformComponent.h
Source/Runtime/Core/: Curve.cpp  Delegate.h  GlobalSymbols.cpp  GlobalSymbols.h
Source/Runtime/Core/Algorithm/: CurveDistance.h  GeometryProcess.cpp  GeometryProcess.h  GraphTheory.h  PlaneGeometry.h  SplineLibrary.cpp  SplineLibrary.h
Source/Runtime/Core/Containers/: FString.h
Source/Runtime/Core/Log/: Log.h  LogFormatter.h  Logger.cpp  Logger.h
Source/Runtime/Core/Math/: Box.h  FTransform.cpp  FTransform.h  Geometry.cpp  Geometry.h  Intersect.cpp  Intersect.h  LinearAlgebra.cpp  LinearAlgebra.h  Math.h  MathType.h  Random.h
Source/Runtime/Core/Mesh/: BasicShapesLibrary.cpp  BasicShapesLibrary.h  MeshBoolean.cpp  MeshBoolean.h  StaticMesh.cpp  StaticMesh.h
Source/Runtime/Core/Misc/: Config.cpp  Config.h  Path.cpp  Path.h  Platform.h  ini.h
Source/Runtime/Core/Object/: Object.cpp  Object.h  ObjectInitiliazer.h  ObjectPropertyTag.h
Source/Runtime/Core/Reflection/reflection/: reflection.cpp  reflection.h
Source/Runtime/Core/Surface/: ParametricSurface.cpp  ParametricSurface.h
Source/Runtime/Game/: Actor.cpp  Actor.h  StaticMeshActor.cpp  StaticMeshActor.h  TimerManager.cpp  TimerManager.h  World.cpp  World.h
Source/Runtime/Materials/: Material.h
Source/Runtime/Mechanisms/: SpatialJoints.h
Source/Runtime/Render/: GPUSceneInterface.cpp  GPUSceneInterface.h  GpuSceneInterface.cpp  GpuSceneInterface.h  ViewportInterface.cpp  ViewportInterface.h
Source/Runtime/Render/Core/: LuisaViewport.h  RayCastHit.h  ViewMode.h  bxdf_context.h  draw_lines.h  frame.cpp  frame.h  g_buffer.h  gbuffer.h  geometry_buffer.h  material_data.h  math_function.h  random.cpp  random.h  ray_intersection.h  ray_tracing_hit.h  sample.cpp  sample.h  shadow_terminator.h  shape.h  transform_data.h  triangle_data.h  view.h  view_data.h
Source/Runtime/Render/PipeLine/: DeferredShadingScene.cpp  DeferredShadingScene.h  GpuScene.cpp  GpuScene.h  PathTracingScene.cpp  PathTracingScene.h  PipelineInterface.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  ris_reservoir.h
Source/Runtime/Render/PipeLine/RenderPass/: buffer_view_pass.cpp  buffer_view_pass.h
Source/Runtime/Render/PipeLine/denoiser/: denoiser.cpp  denoiser.h  denoiser_ext.cpp  denoiser_ext.h  svgf_buffer.h
Source/Runtime/Render/RayTracing/: RayTracingPipeline.cpp  RayTracingPipeline.h  RayTracingScene.cpp  RayTracingScene.h
Source/Runtime/Render/SceneProxy/: CameraSceneProxy.cpp  CameraSceneProxy.h  LightSceneProxy.cpp  LightSceneProxy.h  LineSceneProxy.cpp  LineSceneProxy.h  MaterialSceneProxy.cpp  MaterialSceneProxy.h  SceneProxy.cpp  SceneProxy.h  ShapeSceneProxy.cpp  ShapeSceneProxy.h  StaticMeshSceneProxy.cpp  StaticMeshSceneProxy.h  TransformProxy.cpp  TransformProxy.h
Source/Runtime/Render/light/: area_light.h  light_base.h  lights.h  ltc_area_light.h  point_light.h
Source/Runtime/Render/material/: blinn_phong_material.h  disney_material.h  material_base.h  shader_base.h  shading_function.h
Source/Runtime/Render/sampler/: independent_sampler.cpp  independent_sampler.h  light_sampler.h  sampler_base.h  sobol.h  sobolmatrices.h
Source/Runtime/UI/: ImguiPlus.cpp  ImguiPlus.h  OsDialogs.h  UIWidget.h
Source/Runtime/UI/Imguizmo/: Imguizmo.cpp
Source/Runtime/Utility/: HelpStruct.h  HelpTypedef.h
(+216 files in other folders)
